Ajustes pa QA do Sonar